Add text for bio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>Michael Spencer</h1>
+    <!-- use em over i to italize text and strong over b for bold for better semantics -->
     <p><em>Founder of <strong>Meikono</strong>.</em></p>
+    <p>I am a Python and Web Developer. This is my favorite text on the Citadel.</p>
 </body>
 
 </html>
