--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael's Personal Site</title>
+    <title>Personal Site</title>
 </head>
 
 <body>
-    <h1>Michael Spencer</h1>
+    <h1>Ren Tsukino</h1>
     <!-- use em over i to italize text and strong over b for bold for better semantics -->
-    <p><em>Founder of <strong>Meikono</strong>.</em></p>
+    <p><em>Founder of the Phantom Thieves <strong>of Hearts</strong>.</em></p>
     <p>I am a Python and Web Developer. This is my favorite text on the Citadel.</p>
     <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>Shujin Academy</li>
+    </ul>
 </body>
 
 </html>
