Add hobbies list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <ul>
         <li>Shujin Academy</li>
     </ul>
+    <h3>My Hobbies</h3>
+    <ul>
+        <li>Arcades</li>
+        <li>Reading</li>
+        <li>Playing Pool</li>
+    </ul>
 </body>
 
 </html>
