--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <!-- Alt will show text if the img fails to load -->
+    <!-- Alt also helps with SEO; it helps to have good keywords in ALT -->
+    <img src="profile_picture.png" alt="Ren Tsukino profile picture">
     <h1>Ren Tsukino</h1>
     <!-- use em over i to italize text and strong over b for bold for better semantics -->
     <p><em>Founder of the Phantom Thieves <strong>of Hearts</strong>.</em></p>
@@ -19,11 +22,11 @@
         <li>Shujin Academy</li>
     </ul>
     <h3>My Hobbies</h3>
-    <ul>
+    <ol>
         <li>Arcades</li>
         <li>Reading</li>
         <li>Playing Pool</li>
-    </ul>
+    </ol>
 </body>
 
 </html>
