reduce width of img to fit better

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Alt will show text if the img fails to load -->
     <!-- Alt also helps with SEO; it helps to have good keywords in ALT -->
-    <img src="profile_picture.png" alt="Ren Tsukino profile picture">
+    <img style="width: 200px;" src="profile_picture.png" alt="Ren Tsukino profile picture">
     <h1>Ren Tsukino</h1>
     <!-- use em over i to italize text and strong over b for bold for better semantics -->
     <p><em>Founder of the Phantom Thieves <strong>of Hearts</strong>.</em></p>
