Add links to text

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <img style="width: 200px;" src="profile_picture.png" alt="Ren Tsukino profile picture">
     <h1>Ren Tsukino</h1>
     <!-- use em over i to italize text and strong over b for bold for better semantics -->
-    <p><em>Founder of the Phantom Thieves <strong>of Hearts</strong>.</em></p>
+    <p><em>Founder of the Phantom Thieves <strong><a
+                    href="https://megamitensei.fandom.com/wiki/Protagonist_(Persona_5)">of Hearts</a></strong>.</em></p>
     <p>I am a Python and Web Developer. This is my favorite text on the Citadel.</p>
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>Shujin Academy</li>
+        <li>Shujin <a href="https://megamitensei.fandom.com/wiki/Shujin_Academy">Academy</a></li>
     </ul>
     <h3>My Hobbies</h3>
     <ol>
