Add link to hobbies page

--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-
+    <h3>My Hobbies</h3>
+    <ol>
+        <li>Arcades</li>
+        <li>Reading</li>
+        <li>Playing Pool</li>
+    </ol>
 </body>
 
 </html>
