--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
     <ul>
         <li>Shujin <a href="https://megamitensei.fandom.com/wiki/Shujin_Academy">Academy</a></li>
     </ul>
-    <h3>My Hobbies</h3>
-    <ol>
-        <li>Arcades</li>
-        <li>Reading</li>
-        <li>Playing Pool</li>
-    </ol>
+    <a href="hobbies.html">My Hobbies</a>
 </body>
 
 </html>
