Add contact page and update readme

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li>Shujin <a href="https://megamitensei.fandom.com/wiki/Shujin_Academy">Academy</a></li>
     </ul>
     <a href="hobbies.html">My Hobbies</a>
+    <a href="contact.html">Contact Me</a>
 </body>
 
 </html>
