--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
     <ul>
         <li>Shujin <a href="https://megamitensei.fandom.com/wiki/Shujin_Academy">Academy</a></li>
     </ul>
+    <h3>Work Experience</h3>
+    <table>
+        <tr>
+            <td>2018</td>
+            <td>Beef Bowl Shop</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Crossrods Bar</td>
+        </tr>
+    </table>
+    <hr>
+
     <a href="hobbies.html">My Hobbies</a>
     <a href="contact.html">Contact Me</a>
 </body>
