--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
     </ul>
     <h3>Work Experience</h3>
     <table>
-        <tr>
-            <td>2018</td>
-            <td>Beef Bowl Shop</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>Crossrods Bar</td>
-        </tr>
+        <!-- table head -->
+        <thead>
+            <th>Dates</th>
+            <th>Work</th>
+        </thead>
+        <!-- table body -->
+        <tbody>
+            <tr>
+                <td>2018</td>
+                <td>Beef Bowl Shop</td>
+            </tr>
+            <tr>
+                <td>2018</td>
+                <td>Crossrods Bar</td>
+            </tr>
+        </tbody>
     </table>
     <hr>
 
