--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
 </head>
 
 <body>
-    <!-- Alt will show text if the img fails to load -->
-    <!-- Alt also helps with SEO; it helps to have good keywords in ALT -->
-    <img style="width: 200px;" src="profile_picture.png" alt="Ren Tsukino profile picture">
-    <h1>Ren Tsukino</h1>
-    <!-- use em over i to italize text and strong over b for bold for better semantics -->
-    <p><em>Founder of the Phantom Thieves <strong><a
-                    href="https://megamitensei.fandom.com/wiki/Protagonist_(Persona_5)">of Hearts</a></strong>.</em></p>
-    <p>I am a Python and Web Developer. This is my favorite text on the Citadel.</p>
+    <!-- Using <table> to create a layout -->
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <!-- Alt will show text if the img fails to load -->
+                <!-- Alt also helps with SEO; it helps to have good keywords in ALT -->
+                <img style="width: 200px;" src="profile_picture.png" alt="Ren Tsukino profile picture">
+            </td>
+            <td>
+                <h1>Ren Tsukino</h1>
+                <!-- use em over i to italize text and strong over b for bold for better semantics -->
+                <p><em>Founder of the Phantom Thieves <strong><a
+                                href="https://megamitensei.fandom.com/wiki/Protagonist_(Persona_5)">of
+                                Hearts</a></strong>.</em></p>
+                <p>I am a Python and Web Developer. This is my favorite text on the Citadel.</p>
+            </td>
+        </tr>
+    </table>
+
     <hr>
+
     <h3>Education</h3>
     <ul>
         <li>Shujin <a href="https://megamitensei.fandom.com/wiki/Shujin_Academy">Academy</a></li>
