--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <ul>
         <li>Shujin <a href="https://megamitensei.fandom.com/wiki/Shujin_Academy">Academy</a></li>
     </ul>
+
     <h3>Work Experience</h3>
     <table>
         <!-- table head -->
@@ -53,6 +54,23 @@
             </tr>
         </tbody>
     </table>
+
+    <h3>Skills</h3>
+    <table>
+        <tr>
+            <td>Brewing Coffee</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Batting</td>
+            <td>⭐⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Track and Field</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+    </table>
+
     <hr>
 
     <a href="hobbies.html">My Hobbies</a>
