Add form for contact

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,14 @@
     <p>My Address</p>
     <p>141049913</p>
     <p>myemail@gmail.com</p>
+
+    <!-- Example of Form -->
+    <form action="index.html" method="post">
+        <!-- Labels and Inputs -->
+        <label>Your Name:</label>
+        <input type="text" name="" id="">
+        <input type="submit" value="Submit">
+    </form>
 </body>
 
 </html>
