--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,17 @@
     <p>My Address</p>
     <p>141049913</p>
     <p>myemail@gmail.com</p>
-
+    <hr>
     <!-- Example of Form -->
-    <form action="index.html" method="post">
+    <!-- enctype specifies type of data in form -->
+    <form action="contact.html" method="post" enctype="text/plain">
         <!-- Labels and Inputs -->
         <label>Your Name:</label>
-        <input type="text" name="" id="">
+        <input type="text" name="yourName" id=""><br>
+        <label for="">Your Email:</label>
+        <input type="email" name="yourEmail" id=""><br>
+        <label for="">Your Message:</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit" value="Submit">
     </form>
 </body>
